commit test security with keycloak